<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="horizontal"
        android:windowSoftInputMode="stateAlwaysHidden" >

        <include
            android:id="@+id/titlebar"
            layout="@layout/titlebar" />

        <LinearLayout
            android:id="@+id/layoutSaveCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlebar"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="50"
                android:text="@string/show_q_and_a" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="50"
                android:text="@string/save" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutSaveCancel"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:text="@string/q" />

            <EditText
                android:id="@+id/editQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:gravity="center_vertical|bottom"
                android:hint="@string/question"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:overScrollMode="ifContentScrolls"
                android:scrollbarStyle="insideInset"
                android:scrollbars="horizontal" >
            </EditText>

            <TextView
                android:id="@+id/questionMark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="5"
                android:text="@string/questionMark" />
        </LinearLayout>

        <TextView
            android:id="@+id/textA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/layoutQuestion"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/a" />

        <EditText
            android:id="@+id/editAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutQuestion"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/textA"
            android:gravity="center_vertical|bottom"
            android:hint="@string/answer"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarStyle="insideInset"
            android:scrollbars="horizontal" >
        </EditText>

        <ImageView
            android:id="@+id/imgMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editAnswer"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:contentDescription="@string/start_recording"
            android:src="@drawable/mic" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/editAnswer"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:contentDescription="@string/delete_audio"
            android:src="@android:drawable/ic_delete"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/editAnswer"
            android:layout_toLeftOf="@id/imgDelete"
            android:clickable="true"
            android:contentDescription="@string/play_audio"
            android:src="@drawable/ic_media_play"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/checkAsked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/imgMic"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:checked="true" />

        <CheckBox
            android:id="@+id/checkAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/checkAsked"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:checked="false" />

        <TextView
            android:id="@+id/textToWhom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/checkAnswered"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/to_whom" />

        <EditText
            android:id="@+id/editToWhom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textToWhom"
            android:layout_below="@id/checkAnswered"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/textToWhom"
            android:ems="10"
            android:hint="@string/optional"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/textLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editToWhom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/language" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textLanguage"
            android:layout_alignLeft="@id/editToWhom"
            android:layout_below="@id/editToWhom"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/textLanguage"
            android:entries="@+array/array_languages" />

        <TextView
            android:id="@+id/textWhen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/spinnerLanguage"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/when" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editToWhom"
            android:layout_below="@id/spinnerLanguage"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/textWhen"
            android:ems="10"
            android:focusable="false"
            android:inputType="none" />

        <TextView
            android:id="@+id/textWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editDate"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:text="@string/where" />

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editToWhom"
            android:layout_below="@id/editDate"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/textWhere"
            android:ems="10"
            android:hint="@string/optional" />

        <EditText
            android:id="@+id/editNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editLocation"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/notes"
            android:inputType="textMultiLine|textCapSentences" />
    </RelativeLayout>

</ScrollView>