<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     
    <include layout="@layout/titlebar"
        android:id="@+id/titlebar"/>
 
     <Button 
        android:id="@+id/buttonAddWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_centerInParent="true"
        android:text="@string/button_add_new_word"
        android:layout_marginBottom="10dp"
        android:onClick="addNewWord"/>
     
    <Spinner
       android:id="@+id/spinnerLanguageFilter"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/buttonAddWord"
       android:layout_centerInParent="true"
       android:layout_marginBottom="20dp" /> 
     
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:layout_below="@id/spinnerLanguageFilter"> 
   
    <TextView
       android:id="@+id/header_word"
       style="?android:attr/listSeparatorTextViewStyle"
       android:layout_width="0dp"
       android:layout_weight="45"
       android:layout_height="wrap_content"  
       android:gravity="center_horizontal"
       android:layout_marginRight="10dp"
       android:clickable="true"
       android:onClick="sortByWord"
       android:text="@string/word_or_phrase" />
   
     <TextView
       android:id="@+id/header_date"
       style="?android:attr/listSeparatorTextViewStyle"
       android:layout_width="0dp"
       android:layout_weight="35"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:layout_marginRight="10dp"
       android:text="@string/date"
       android:clickable="true"
       android:onClick="sortByDate" />
   
    <TextView
      android:id="@+id/header_audio"
      style="?android:attr/listSeparatorTextViewStyle"
      android:layout_width="0dp"
      android:layout_weight="20"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/audio" />
   </LinearLayout>
</RelativeLayout>
