<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        tools:context=".AddKidFragment" >

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/textName"
            style="@style/MyLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/name" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:layout_marginTop="5dp"
            android:hint="@string/required"
            android:inputType="textPersonName|textCapWords|textNoSuggestions" >
        </EditText>

        <TextView
            android:id="@+id/textBirthdate"
            style="@style/MyLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editName"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/birthdate" />

        <EditText
            android:id="@+id/editBirthDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textBirthdate"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:hint="@string/required"
            android:inputType="none" />

        <TextView
            android:id="@+id/textDefaultLocation"
            style="@style/MyLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editBirthDate"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:text="@string/default_location" />
        
        <EditText
            android:id="@+id/editDefaultLocation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textDefaultLocation"
            android:layout_marginTop="5dp"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/textChooseLanguage"
            style="@style/MyLabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editDefaultLocation"
            android:layout_marginTop="25dp"
            android:text="@string/default_language"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerDefaultLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textChooseLanguage"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:entries="@+array/array_languages" />

        <Button
            android:id="@+id/buttonSaveKid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinnerDefaultLanguage"
            android:layout_marginTop="30dp"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>